<resources>
    <string name="app_name">EjercicioIndividual3</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="divide">DIVIDE</string>
    <string name="multiply">MULTIPLY</string>
    <string name="result">Resultado&#8230;</string>
    <string name="image_desc">Calculator Icon</string>
    <string name="divide_by_zero">Error: Division by zero</string>
</resources>