<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="50dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/math_icon"
            />

        <EditText
            android:id="@+id/etFirstNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/first_number"
            android:autofillHints="First Number"
            android:inputType="number"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etSecondNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/second_number"
            android:autofillHints="Second Number"
            android:inputType="number"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/add"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#6200EE"
            android:onClick="add"
            android:text="@string/add"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#6200EE"
            android:onClick="subtract"
            android:text="@string/subtract"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#6200EE"
            android:onClick="divide"
            android:text="@string/divide"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#6200EE"
            android:onClick="multi"
            android:text="@string/multiply"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="24sp" />


    </LinearLayout>


</LinearLayout>